<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
<!--
    <header
        android:fragment="com.mx.vise.acarreos.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.mx.vise.acarreos.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />
-->
    <header
        android:fragment="com.mx.vise.cubicaciones.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_data"
        android:title="@string/pref_header_data_sync"
        android:summary="Ajuste para sincronizar con los servidores de VISE"/>
    <header
        android:fragment="com.mx.vise.cubicaciones.settings.SettingsActivity$PrinterPreferenceFragment"
        android:icon="@drawable/ic_printer_black"
        android:title="@string/pref_header_printer"
        android:summary="Configura la impresora térmica por Bluetooth"/>

    <header
        android:fragment="com.mx.vise.cubicaciones.settings.SettingsActivity$UpdatePreferenceFragment"
        android:icon="@drawable/ic_update"
        android:title="@string/pref_header_update"
        android:summary="Busca actualizaciones disponibles para la aplicación"/>

</preference-headers>
