<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.vise.cubicaciones.activities.CaptureLicensePlateActivity">

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="CAPTURAR PLACA"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <Space
        android:id="@+id/space2"
        android:layout_width="157dp"
        android:layout_height="11dp"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space3"
        android:layout_width="20dp"
        android:layout_height="167dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/space6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2"
        app:layout_constraintVertical_bias="0.365" />

    <Space
        android:id="@+id/space"
        android:layout_width="17dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/space6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:drawableRight="@drawable/ic_camera"
        android:text="@string/take_photo"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/truckImageView" />

    <Button
        android:id="@+id/nextButtonLicencePlate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:drawableRight="@drawable/ic_next"
        android:text="@string/next"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/space6"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoButton"
        app:layout_constraintVertical_bias="0.847" />

    <EditText
        android:id="@+id/lpEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/introduce_a_licence_plate"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <Space
        android:id="@+id/space6"
        android:layout_width="246dp"
        android:layout_height="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/truckImageView"
        android:layout_width="95dp"
        android:layout_height="134dp"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/lpMessageTextView"
        app:srcCompat="@drawable/ic_front_lp" />

    <TextView
        android:id="@+id/lpMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/licence_plate_has_more_char"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/truckImageView"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/lpEditText" />
</android.support.constraint.ConstraintLayout>
